[doc] doc for -fgraal-c-entrypoint-literal-upcall